--- a/src/Components/Droite/droite.module.css
+++ b/src/Components/Droite/droite.module.css
@@ -1,3 +1,85 @@
 .header{
-    justify-content: space-around;
+    justify-content: space-between;
+    text-align: center ;
+    align-items: center;
+}
+.boxparents1{
+    gap: 2rem
+    ;
+}
+.boxparents2{
+    margin:  2rem 0;
+    gap: 2rem
+    ;
+}
+.sary{
+    width: 5%;
+}
+
+
+.box1p1{
+    display: flex;
+    flex-direction: column;
+    border: solid 2px black;
+    border-radius: 2rem;
+    padding: 3rem ;
+    width: 40rem;
+    
+}
+
+.box2p1{
+    display: flex;
+    flex-direction: column;
+    border: solid 2px black;
+    border-radius: 2rem;
+    padding: 3rem ;
+    width: 40rem;
+    
+}
+.box1p2{
+    display: flex;
+    flex-direction: column;
+    border: solid 2px black;
+    border-radius: 2rem;
+    padding: 3rem ;
+    width: 40rem;
+   
+}
+
+.box2p2{
+  
+}
+.box2p2 img {
+
+   
+    border-radius: 2rem;
+    /* padding: 3rem ; */
+
+    width: 37rem;
+}
+.conversionmney{
+    display: flex;
+    gap: 2rem;
+    margin:  1rem 0;
+    /* justify-content: center; */
+    align-items: center;
+    text-align: center;
+}
+
+.btn{
+    background-color: red;
+    padding: 0 5rem;
+    border-radius: 2rem;
+}
+.titlecitation{
+    margin:  1rem 0;
+}
+.citation{
+    /* margin: 2rem 0 0 0; */
+    display: flex;
+    gap: 2rem;
+}
+
+.citation1{
+   
 }
