--- a/src/Components/Home/home.module.css
+++ b/src/Components/Home/home.module.css
@@ -7,7 +7,8 @@
 .gauche{
     background-color: red;
     height: 100%;
-    justify-content: center;
+    /* justify-content: center; */
+    position: fixed;
     display: flex;
     text-align: center;
     align-items: center;
@@ -16,7 +17,11 @@
    
 }
 .droite{
-    background-color:yellow;
+    padding: 0 4rem;
+    /* width: 100%; */
+    margin-left: 7rem;
+    background-color: yellow;
     height: 100%;
+    
    
 }
