--- a/src/Components/Home/home.module.css
+++ b/src/Components/Home/home.module.css
@@ -5,7 +5,7 @@
 }
 
 .gauche{
-    background-color: red;
+    background-color: rgb(23 92 114);
     height: 100%;
     /* justify-content: center; */
     position: fixed;
@@ -20,7 +20,7 @@
     padding: 0 4rem;
     /* width: 100%; */
     margin-left: 7rem;
-    background-color: yellow;
+    background-color: whitesmoke;
     height: 100%;
     
    
