--- a/src/Components/Home/home.module.css
+++ b/src/Components/Home/home.module.css
@@ -21,7 +21,7 @@
     /* width: 100%; */
     margin-left: 7rem;
     background-color: whitesmoke;
-    height: 100%;
+    height: 100vh;
     
    
 }
