--- a/src/Components/navbars/navbar.module.css
+++ b/src/Components/navbars/navbar.module.css
@@ -10,7 +10,7 @@ NavLink{
 }
 
 .active{
-    color: white;
+    color: #ffb491;
     transition: 0.5s;
 }
 
@@ -20,6 +20,10 @@ NavLink{
 }
 .Non_active{
     color: white;
+    transition: 0.5s;
+}
+.Non_active:hover{
+    color: rgb(211, 72, 72);
     transition: 0.5s;
 }
 .liens{
